Add index.html for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <title>API</title>
 </head>
 <body>
-  <!-- Heading for the Page -->
   <header class="header-container">
     <h1>Lab 5</h1>
     <h2>App displaying card content using API</h2>
@@ -19,14 +18,12 @@
   <section class="option-2-enhanced">
     <div class="option-container">
       <h2>Option 2 Enhanced</h2>
-      <p>Add a search box to filter the list of cards.</p>
-      <!--Search box to find content on cards-->
+      <p>Search by name, firmness or flavor!</p>
       <div class="box" style="text-align: center;">
         <input id="searchbar" class="search" type="text" name="search" placeholder="Search..">
       </div>
     </div>
     <div class="container">
-      <!--Display cards-->
       <ul id="option-2-enhanced-results" class="card-container"></ul>
     </div>
   </section>
